# prestige-protocol-legacy

./: .gitignore  README.md
app/: README.md  package.json  tsconfig.json
app/src/components/: AppBar.tsx  ManagerPanel.tsx  PrestigeDao.tsx  SolanaResume.tsx
app/src/pages/: _app.tsx  index.tsx
app/src/stores/: useManagerPanelStore.tsx  useSolanaResumeStore.tsx  useUserSOLBalanceStore.tsx
assets/: solana-bounty-nft.json  solana-bounty-xp.json
lib/: .gitignore  README.md  package.json  tsconfig.json
lib/src/: index.ts
lib/src/driver/: reward.ts
lib/src/instructions/: close-challenge.ts  close-contract.ts  create-award.ts  create-badge.ts  create-challenge.ts  create-contract.ts  create-custom-mint.ts  (+18 more)
lib/tests/: prestige.test.ts
program/: Cargo.toml  README.md  cicd.sh
program/src/: lib.rs  processor.rs
program/src/instructions/: close_challenge.rs  close_contract.rs  create_award.rs  create_badge.rs  create_challenge.rs  create_contract.rs  create_custom_mint.rs  create_escrow.rs  create_event.rs  create_pot.rs  create_prize.rs  create_user.rs  fulfill_contract.rs  issue_payout.rs  issue_reward.rs  mint_badge.rs  mod.rs  update_challenge.rs  update_challenge_metadata.rs  update_event.rs  update_event_metadata.rs  update_pot.rs  update_prize.rs  update_user_metadata.rs
program/src/state/: award.rs  badge.rs  challenge.rs  contract.rs  escrow.rs  event.rs  mint.rs  mod.rs  payout.rs  pot.rs  prestige_xp_mint.rs  prize.rs  reward.rs  user.rs
program/src/util/: accounts.rs  addresses.rs  mint_custom_mint.rs  mod.rs  size.rs  transfer_escrow.rs
(+30 files in other folders)
