[package]
name = "prestige-program"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
borsh = "0.9.3"
borsh-derive = "0.9.3"
solana-program = "1.14.5"
spl-token = { version="3.5.0", features = [ "no-entrypoint" ] }
spl-associated-token-account = { version="1.1.1", features = [ "no-entrypoint" ] }
mpl-token-metadata = { version="1.2.5", features = [ "no-entrypoint" ] }